@startuml

class Main

class Robot{
    -user
    -store
    +ask_name()
    +ask_like_restaurant()
    +propose_restaurant()
}

class Store{
    +create_sotre()
    +read_rows()
    +update_store(restaurant_name: str)
    +create_row(restaurant_name: str)
    +store_is_exists()
}

class User{
    -name
    -favorite_restaurant
}

Main --> Robot
Robot --> Store


@enduml